<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_schedule_event"
    tools:ignore="PrivateResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/padding_10">


        <TextView
            android:id="@+id/editEnd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/end_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStart"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/editVenue"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/venue"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEnd"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/editTitle"
            style="@android:style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoSizeTextType="uniform"
            android:ems="10"
            android:hint="@string/event_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:singleLine="false"
            android:textIsSelectable="true"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/editStart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/start_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickMovie"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/location"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/location"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendees" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:alwaysDrawnWithCache="false"
            android:animateLayoutChanges="false"
            android:animationCache="false"
            android:clickable="true"
            android:contextClickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:isScrollContainer="true"
            android:longClickable="true"
            android:nestedScrollingEnabled="true"
            android:touchscreenBlocksFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/attendees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/attendees"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editVenue" />

        <TextView
            android:id="@+id/movie"
            android:layout_width="78dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/movie_title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <TextView
            android:id="@+id/pickMovie"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:freezesText="false"
            android:gravity="center_vertical"
            android:text="@string/addNewMovie"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.964"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <ImageButton
            android:id="@+id/startPicker"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/datePicker"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/editStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editStart"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <ImageButton
            android:id="@+id/endPicker"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:contentDescription="@string/datePicker"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/editEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editEnd"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/viewAttendees"
            android:layout_width="279dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="end"
            android:text="0"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/attendees"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/attendees"
            app:layout_constraintTop_toTopOf="@+id/attendees"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editLatLon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/latLon"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>