<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="?attr/colorBackgroundFloating"
                tools:layout_conversion_absoluteHeight="64dp"
                tools:layout_conversion_absoluteWidth="65dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="64dp" />

            <TextView
                android:id="@+id/scheduleEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/newEvent"
                android:textAlignment="center"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="24sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/save"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="?attr/colorBackgroundFloating"
                android:visibility="visible"
                tools:layout_conversion_absoluteHeight="64dp"
                tools:layout_conversion_absoluteWidth="64dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_schedule_event" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>