<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attendeesList"
        android:layout_width="315dp"
        android:layout_height="500dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/addAttendees"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/saveAttendees"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addEmail"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/openContactPicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/openContactPicker"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="+"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/addEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addEmail"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/saveAttendees"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>